# pycovid

./: .gitignore  README.rst  notes.md  pyproject.toml
data/: COVID-19-daily-announced-vaccinations-28-July-2021.xlsx
data/England vaccine effectiveness/: Delta Cases In England By Vaccination Status.numbers  Delta Cases In England By Vaccination Status.xlsx  README.md
data/PHE_VACCINE_REPORT_20/: Fig_1_Dose_1.csv  Fig_1_Dose_2.csv  Fig_2_Dose_1.csv  Fig_2_Dose_2.csv
src/: cmi-mortality.py  decline_comparison.py  effectiveness.py  england_vaccine_effectiveness.py  hope_simpson.py  npi_effectiveness.py  post-vaccination-spike.py  solar_declination.py
src/analysis/: hope_simpson.py
src/pycovid/: __init__.py  chart_utils.py  data_utils.py  government_response.py  npi_effectiveness.py  utils.py
src/pycovid/data_utils/: __init__.py  cmi.py  data_utils.py  nhs.py  ons.py  owid.py
tests/: test_CMI.py  test_england_vaccine_effectiveness.py  test_government_response.py  test_pycovid.py  test_read_vaccination_data.py  test_utils.py
