[tool.poetry]
name = "pycovid"
version = "0.1.0"
description = ""
authors = ["Richard Lyon <richlyon@mac.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.4"
openpyxl = "^3.0.7"
matplotlib = "^3.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
