[tool.poetry]
name = "pycovid"
version = "0.1.0"
description = ""
authors = ["Richard Lyon <richlyon@mac.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pandas = "^1.2.4"
openpyxl = "^3.0.7"
matplotlib = "^3.4.1"
numpy = "^1.20.3"
scipy = { file = "/Volumes/SamsungT7/Resilio/0_PROJECTS/pycovid/lib/scipy-1.6.3-cp39-cp39-macosx_11_0_arm64.whl"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
